<resources>
    <string name="app_name">SwatchAdmin5</string>
    <string name="Password">Password</string>
    <string name="Logo">Logo</string>
    <string name="Email">Email ID</string>
    <string name="Login">Login</string>
    <string name="SignIn">SignIn</string>
    <string name="SignUp">SignUp</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Space">.....</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="Name">Name</string>
    <string name="Cpassword">Confirm Password</string>
    <string name="Phone_no">Phone No</string>
    <string name="IAHA">I already have an Account</string>
    <string name="username">Username</string>
    <string name="ALogin">Admin Login</string>
    <string name="ULogin">User Login</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ProfilePic">Profile Picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="Complaint">Complaint</string>
</resources>
