<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group"
    tools:context="com.example.prathameshrege.swatchadmin5.Admin_login">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="447dp"
            android:layout_height="437dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@android:string/unknownName"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.929"
            app:srcCompat="@drawable/rect" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_above="@+id/editText4"
            android:layout_alignStart="@+id/editText4"
            android:layout_marginBottom="10dp"
            android:fontFamily="casual"
            android:text="@string/Password"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:ems="10"
            android:inputType="textPassword"
            android:labelFor="@id/editText4" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="53dp"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="193dp"
                    android:layout_height="41dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext"
                    android:fontFamily="sans-serif"
                    android:onClick="OnLogin"
                    android:text="@string/Login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.031" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="117dp"
            android:layout_height="126dp"
            android:layout_above="@+id/textview"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="27dp"
            android:contentDescription="@string/Logo"
            android:cropToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14"
            app:srcCompat="@drawable/logo3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:fontFamily="casual"
            android:text="@string/username"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@id/editText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.611" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:text="@string/ALogin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.283" />


</RelativeLayout>

